--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.0",
+    "lucide-react": "^0.563.0",
     "next": "^16.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
